--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./favicon.jpg">
-    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>LOL Catalogue</title>
   </head>
   <body>
